# pay-rail

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json  payrail.config.yaml  pnpm-lock.yaml
.github/workflows/: ci.yml  conformance.yml  knowledge-validation.yml  release-npm.yml  release-rust.yml
crates/payrail-adapters/: CLAUDE.md  Cargo.toml
crates/payrail-adapters/src/: lib.rs  registry.rs  traits.rs
crates/payrail-adapters/src/peach/: adapter.rs  mappings.rs  mod.rs  types.rs
crates/payrail-adapters/src/startbutton/: adapter.rs  mappings.rs  mod.rs  types.rs
crates/payrail-adapters/tests/: adapter_registry_tests.rs  multi_provider.rs  peach_conformance.rs  peach_sandbox.rs  peach_tests.rs  startbutton_conformance.rs
crates/payrail-adapters/tests/conformance/: mod.rs  peach_fixtures.rs  startbutton_fixtures.rs
crates/payrail-cli/: CLAUDE.md  Cargo.toml
crates/payrail-cli/src/: conformance.rs  doctor.rs  generate.rs  init.rs  knowledge.rs  main.rs  reconciliation.rs  status.rs
crates/payrail-cli/tests/: cli_integration.rs
crates/payrail-core/: CLAUDE.md  Cargo.toml
crates/payrail-core/src/: config.rs  error.rs  id.rs  knowledge.rs  lib.rs  prelude.rs
crates/payrail-core/src/event/: mod.rs  store.rs  types.rs
crates/payrail-core/src/idempotency/: key.rs  mod.rs  store.rs
crates/payrail-core/src/payment/: machine.rs  mod.rs  state.rs  timeout.rs  types.rs
crates/payrail-core/src/reconciliation/: discrepancy.rs  engine.rs  loop_runner.rs  mod.rs  report.rs  types.rs
crates/payrail-core/src/webhook/: mod.rs  receiver.rs  signature.rs
crates/payrail-core/tests/: event_store_integration.rs  idempotency_integration.rs  integration.rs  signature_verification_integration.rs  webhook_receiver_integration.rs
crates/payrail-mcp/: CLAUDE.md  Cargo.toml
crates/payrail-mcp/src/: lib.rs
crates/payrail-output/: CLAUDE.md  Cargo.toml
crates/payrail-output/src/: colors.rs  config.rs  format.rs  lib.rs  symbols.rs  writer.rs
docs/: reconciliation.md
knowledge-packs/peach-payments/: pack.yaml
knowledge-packs/peach-payments/docs/: peach-payments-api-reference.md
knowledge-packs/startbutton/: pack.yaml
knowledge-packs/startbutton/compiled/: meta.json  pack.json
knowledge-packs/startbutton/tests/: conformance.test.ts
