[package]
name = "payrail-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PayRail provider adapters: Peach Payments, Startbutton, and adapter trait framework"

[dependencies]
payrail-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
reqwest.workspace = true
