[package]
name = "payrail-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PayRail CLI tool (Phase 2)"

[dependencies]
payrail-core.workspace = true
payrail-adapters.workspace = true
clap.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
ulid.workspace = true
