[package]
name = "payrail-output"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared output formatting, colors, and terminal adaptation for PayRail CLI and MCP"

[dependencies]
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serial_test.workspace = true
